--- a/web/agendamento_wizard.xhtml
+++ b/web/agendamento_wizard.xhtml
@@ -149,8 +149,7 @@
                                              id="salvar-button"
                                              action="#{agendaBean.salvar()}"
                                              process="frm:agendamento-dialog"
-                                             update="frm:msgs-dialog"
-                                             oncomplete=""/>
+                                             update="frm:msgs-dialog"/>
                             
                         </p:panelGrid>
                     </p:tab>
