--- a/web/animal.xhtml
+++ b/web/animal.xhtml
@@ -125,7 +125,7 @@
                 <p:ajax event="rowSelect" update=":frm:toolbar" />
                 <p:ajax event="rowUnselect" update=":frm:toolbar" />
 
-                <p:column headerText="ID">
+                <p:column headerText="ID" width="50">
                     <h:outputText value="#{animal.id}" />
                 </p:column>
                 <p:column headerText="Nome" width="250" 
